[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Door.gd" type="Script" id=2]
[ext_resource path="res://sprites/objects/factory-door.png" type="Texture" id=3]
[ext_resource path="res://sprites/objects/factory-door-red.png" type="Texture" id=4]
[ext_resource path="res://sprites/objects/factory-door-blocked.png" type="Texture" id=5]
[ext_resource path="res://sprites/objects/factory-door-open.png" type="Texture" id=6]
[ext_resource path="res://sound/door-open.ogg" type="AudioStream" id=7]
[ext_resource path="res://sprites/objects/factory-door-blue.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.7244, 15.6147 )

[sub_resource type="CircleShape2D" id=2]
radius = 52.1407

[node name="Door" type="Node2D"]
script = ExtResource( 2 )
ClosedTexture = ExtResource( 3 )
ClosedRedTexture = ExtResource( 4 )
ClosedBlueTexture = ExtResource( 8 )
OpenTexture = ExtResource( 6 )
BlockedTexture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="UseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UseArea"]
shape = SubResource( 2 )

[node name="OpenSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
[connection signal="body_entered" from="UseArea" to="." method="_enter_use_range"]
[connection signal="body_exited" from="UseArea" to="." method="_leave_use_range"]
